# termux-sqlsms

./: .gitignore  README.md  setup.cfg
sqlsms/: errors.py  logger.py  queueprocess.py  smstosql.py
tests/: tests.py
