[metadata]
name = termux_sqlsms
version = attr: termux_sqlsms.__version__
description = Save your SMS message to a database in Termux!
long_description = file: README.md
author = Cbedroid
author_email = Cbedroid1614@gmail.com
url = https://github.com/cbedroid/termux_sqlsms
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP

[options]
packages = find:
python_requires = >=3.5

install_requires =
    sqlalchemy

[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    termux_sqlsms = termux_sqlsms.smstosql:main

[testenv:format]
deps =
    black

commands =
    black -l 79 -t py35   tests/ .

[testenv:tests]
deps =
    pytest
    black
    flake8 >=3.3

commands =
    black --check -l 79 -t py35  tests/ .
    flake8 --statistics --ignore=E231 py35  tests/ .

[testenv:release]
deps =
    wheel

commands =
    python setup.py sdist bdist_wheel

[testenv:upload]
skip_install = true

deps =
    twine

passenv =
    TWINE_PASSWORD

commands =
    twine upload -u __token__ --non-interactive --skip-existing dist/*